--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,24 +16,23 @@
     <body>
     <!--<a href="#/">Player 1</a>-->
     <!--<a href="#/second">Player 2</a>-->
-    <div class="container">
-        <div>
-            <button id="playButton" type="button">Play</button>
-            <button id="pauseButton" type="button">Pause</button>
-            <br>
+        <div class="video-container">
+           <!--<button id="playButton" type="button">Play</button>
+            <button id="pauseButton" type="button">Pause</button>-->
             <video id="video"  class="player" autobuffer preload="auto" width="720" height="400" data-setup="{}">
-                <source src="http://vjs.zencdn.net/v/oceans.mp4" type='video/mp4'>
+                <source src='http://vjs.zencdn.net/v/oceans.mp4' type='video/mp4'>
             </video>
-            <!-- Video Controls -->
-            <!--<div id="video-controls">-->
-                <!--<button type="button" id="play-pause">Play</button>-->
-                <!--<input type="range" id="seek-bar" value="0">-->
-                <!--<button type="button" id="mute">Mute</button>-->
-                <!--<input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">-->
-                <!--<button type="button" id="full-screen">Full-Screen</button>-->
-            <!--</div>-->
-        </div>
-    </div>
+            <div id="video-controls" class="controls">
+                <button id="play-button" type="button" class="play" title="play">Play</button>
+                <button id="pause-button" type="button" class="pause" title="pause">Pause</button>
+                <button id="stop-button" type="button" class="stop" title="stop">Stop</button>
+                <progress id='progress-bar' min='0' max='100' value='0'>0% played</progress>
+                <button id="mute-button" type="button" class="mute" title="mute">Mute</button>
+                <button id="vol-inc-button" type="button" class='volume-plus' title='increase volume' onclick='onVolumeChanged("+");'>Vol+</button>
+                <button id="vol-dec-button" type="button" class='volume-minus' title='deccrease volume' onclick='onVolumeChanged("-");'>Vol-</button>
+                <button id="fullscreen" type="button" class='full-screen' title='full screen'>Fullscreen</button>
+            </div>
+        </div >
     </body>
 </html>
 
